manifests/wikijs/mariadb.yml
apiVersion: v1
kind: Service
metadata:
  name: wikijs-mariadb
  namespace: wikijs
  labels:
    app: mariadb 
spec:
  ports:
    - port: 3306
  selector:
    app: mariadb 
    tier: database 
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs-mariadb
  namespace: wikijs
  labels:
    app: mariadb 
spec:
  selector:
    matchLabels:
      app: mariadb 
      tier: database 
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb 
        tier: database 
    spec:
      containers:
        - image: mariadb
          name: mariadb
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: pv001
