manifests/wikijs/wikijs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wikijs
spec:
  type: ClusterIP 
  selector:
    app: wikijs
  ports:
  - protocol: TCP
    port: 3000 
    targetPort: 3000
