manifests/wikijs/wikijs-ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: "wikijs"
  name: "wikijs-ingress"
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/proxy-body-size:  "50m"
spec:
  tls:
  - hosts:
    - "wiki.fortytwobinary.com"
    secretName: "wikijs-staging-tls"
  rules:
  - host: "wiki.fortytwobinary.com"
    http:
      paths:
        - path: /
          backend:
            serviceName: "wikijs"
            servicePort: 3000 
---
